# vkr

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: all_routers.py  auth.py  config.py  database.py  exceptions.py  main.py
app/DAO/: base.py
app/admin/: auth_admin.py  views.py
app/controller/: controller_driver.py
app/driverss/: daos.py  router.py  schemas.py
app/mechanic/: dao.py  router.py
app/migrations/: env.py
app/migrations/versions/: 0e884bca64d3_v6_add_history_info.py  19f6214d247d_v4_plus_hashed_parr.py  1ff73710fa5b_v5.py  213fe5a201ff_v2_admin.py  8206dd168650_v1.py  9fe6e9cd75ce_v3_check_relation.py  ab4254ef9865_v6.py  aba02cf52f43_v7_fix_models.py
app/models/: __init__.py  models.py
app/tasks/: celerys.py  email_templates.py  tasks.py
tests/: conftest.py
tests/unit_tests/: test_base_dao.py  test_mock.py  test_read_users_me.py
